Settings and state save done

--- a/src/app/@theme/styles/custom-spectre.css.scss
+++ b/src/app/@theme/styles/custom-spectre.css.scss
@@ -2,3 +2,16 @@
 
 // Importing full Spectre.css source code
 @import "node_modules/spectre.css/src/spectre";
+
+.mt-auto {
+  margin-top: auto;
+}
+.mr-auto {
+  margin-right: auto;
+}
+.mb-auto {
+  margin-bottom: auto;
+}
+.ml-auto {
+  margin-left: auto;
+}
