Charges bar done

--- a/src/app/public/daily-income/daily-income.component.html
+++ b/src/app/public/daily-income/daily-income.component.html
@@ -41,3 +41,5 @@
     </div>
   </div>
 </form>
+
+<app-charges-bar [disabled]="dailyRateControl.invalid" [total]="dailyRateControl.value"></app-charges-bar>
