Income calculation done

--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -1,3 +1,5 @@
 <app-daily-income></app-daily-income>
 <div class="divider"></div>
+<app-turnover-realized></app-turnover-realized>
+<div class="divider"></div>
 <app-settings></app-settings>
