--- a/src/app/public/settings/settings.component.html
+++ b/src/app/public/settings/settings.component.html
@@ -14,7 +14,7 @@
         step="0.01"
         placeholder="22"
         type="number"
-        [ngClass]="{ 'is-error': form.controls.socialChargesRate.invalid }"
+        [ngClass]="{ 'is-error': socialChargesRateControl.invalid }"
       >
       <span class="input-group-addon">%</span>
     </div>
