Turnover statistics done

--- a/src/app/public/turnover-realized/turnover-realized.component.html
+++ b/src/app/public/turnover-realized/turnover-realized.component.html
@@ -24,3 +24,8 @@
   [disabled]="turnoverRealizedControl.invalid"
   [total]="turnoverRealizedControl.value"
 ></app-charges-bar>
+
+<app-turnover-stats
+  [disabled]="turnoverRealizedControl.invalid"
+  [turnover]="turnoverRealizedControl.value"
+></app-turnover-stats>
