--- a/src/app/@theme/components/charges-bar/charges-bar.component.html
+++ b/src/app/@theme/components/charges-bar/charges-bar.component.html
@@ -1,13 +1,15 @@
 <div class="bar">
-  <div
-    *ngFor="let item of items; let index = index"
-    class="bar-item tooltip"
-    [ngClass]="class[index % items.length]"
-    [ngStyle]="{ 'width.%': item.percentage }"
-    [attr.data-tooltip]="item.tooltip + ' - ' + (item.value | currency)"
-  >
-    <span class="text-ellipsis">
-      {{ item.value | currency }}
-    </span>
-  </div>
+  <ng-container *ngFor="let item of items; let index = index">
+    <div
+      *ngIf="item.value > 0"
+      class="bar-item tooltip"
+      [ngClass]="class[index % items.length]"
+      [ngStyle]="{ 'width.%': item.percentage }"
+      [attr.data-tooltip]="item.tooltip + ' - ' + (item.value | currency)"
+    >
+      <span class="text-ellipsis">
+        {{ item.value | currency }}
+      </span>
+    </div>
+  </ng-container>
 </div>
