Turnover goal done

--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -2,4 +2,6 @@
 <div class="divider"></div>
 <app-turnover-realized></app-turnover-realized>
 <div class="divider"></div>
+<app-turnover-goal></app-turnover-goal>
+<div class="divider"></div>
 <app-settings></app-settings>
